# grugtorio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cJSON.c  main.c  save.grugtorio.json  tests.py
tests/belt-merry-go-round-huge/: expected.grugtorio.json  save.grugtorio.json  settings.json
tests/belt-merry-go-round-inner/: expected.grugtorio.json  settings.json
tests/belt-merry-go-round-outer/: expected.grugtorio.json  settings.json
tests/belt-sideloading/: TODO.md  expected.grugtorio.json  save.grugtorio.json  settings.json
tests/belt-up-right/: expected.grugtorio.json  save.grugtorio.json  settings.json
tests/belt-zigzag/: expected.grugtorio.json  save.grugtorio.json  settings.json
tests/belts-pointing-into-each-other/: expected.grugtorio.json  save.grugtorio.json
tests/electric-mining-drill-cant-output-into-other-mining-drill/: save.grugtorio.json
tests/electric-mining-drill-into-outer-lane/: expected.grugtorio.json  save.grugtorio.json  settings.json
tests/electric-mining-drill-outputs/: expected.grugtorio.json  save.grugtorio.json  settings.json
